tests/tests/test_runs/snapshots/test_runs__scalar_3l_cross_section_inspects__scalar_3l_cross_section_gl27_q1_squared_numerator_uv_on_threshold_on.snap
---
source: tests/tests/test_runs/scalar_3L_cross_section_inspects.rs
expression: "format!(\"re = {:.17e}\\nim = {:.17e}\", weight.re, weight.im)"
---
re = -1.00366247621107759e-13
im = 1.60860146722053417e-16
